--- a/project.Rmd
+++ b/project.Rmd
@@ -4,66 +4,188 @@ title: "Past Baseball Project"
 
 <hr>
 
-```{r,label = "SETUP", include=FALSE, results = 'hide'}
-knitr::opts_chunk$set(echo = FALSE, fig.align = "center", fig.width = 4, fig.height = 4, comment = NA, warning = FALSE, message = FALSE)
-library(readr)
+```{r Master,label = "SETUP", include=FALSE, results = 'hide'}
+knitr::opts_chunk$set(echo = FALSE, fig.align = "center", comment = NA, warning = FALSE, message = FALSE)
+library(utils)
 library(dplyr)
+library(stringr)
 library(ggplot2)
-Master <- read_csv("~/Appalachian State Baseball/Master.csv")
-```
-
-```{r}
+library(gridExtra)
+library(plotly)
+Master <- read.csv("~/Appalachian State Baseball/Git Repositories/appstatebaseball/Master.csv")
 Hitter <- Master %>%
   filter(Batter == "McDaniel, Joel")
-NinetyPlus <- Hitter %>%
-  filter(ExitSpeed >= 90)
+```
+
+```{r Summary}
+s <- sum(str_count(Hitter$PlayResult, "Single"))
+do <- sum(str_count(Hitter$PlayResult, "Double"))
+t <- sum(str_count(Hitter$PlayResult, "Triple"))
+hr <- sum(str_count(Hitter$PlayResult, "HomeRun"))
+hit <- sum(s + do + t + hr)
+inpl <- sum(str_count(Hitter$PitchCall, "InPlay"))
+rbi <- sum(Hitter$RunsScored)
+bb <- sum(str_count(Hitter$KorBB, "Walk"))
+hbp <- sum(str_count(Hitter$PitchCall, "HitByPitch"))
+walk <- sum(hbp + bb)
+sac <- sum(str_count(Hitter, "Sacrifice"))
+es <- Hitter %>%
+  filter(PitchCall == "InPlay" & ExitSpeed & !Hitter$HitType == "Bunt")
+la <- Hitter %>%
+  filter(PitchCall == "InPlay" & Angle & !Hitter$HitType == "Bunt")
+so <- sum(str_count(Hitter$KorBB, "Strikeout"))
+pa <- inpl + walk + so
+ab <- pa - walk - sac
+avg <- hit / ab
+obp <- (hit + walk) / pa
+tb <- sum(s + (2 * do) + (3 * t) + (4 * hr)) 
+slg <- tb / ab
+ops <- obp + slg
+```
+
+```{r Strike Zone Mapping}
 x <- c(-.95,.95,.95,-.95,-.95)
 z <- c(1.6,1.6,3.5,3.5,1.6)
 sz <- data_frame(x, z)
-ggplot() +
+a <- c(-.32,-.32)
+b <- c(1.6,3.5)
+hm1 <- data_frame(a, b)
+c <- c(.32,.32)
+d <- c(1.6,3.5)
+hm2 <- data_frame(c, d)
+e <- c(-.95,.95)
+f <- c(2.23,2.23)
+hm3 <- data_frame(e, f)
+g <- c(-.95,.95)
+h <- c(2.87,2.87)
+hm4 <- data_frame(g, h)
+labels <- data.frame(x1 = c(-.635, 0, .635, -.635, 0, .635, -.635, 0, .635), y1 = c(1.915, 1.915, 1.915, 2.545, 2.545, 2.545, 3.185, 3.185, 3.185))
+```
+
+| | | | | | | Hitting Summary
+-|-|-|-|-|-|-|-
+PA:|`r pa`| 2B:| `r do` | RBI: |`r rbi`| AVG: |`r round(avg, digits = 3)` |
+AB: |`r ab` | 3B: | `r t` | BB: |`r bb` |SLG: | `r round(slg, digits = 3)`|
+Hits: |`r hit`| HR: | `r hr` | HBP: | `r hbp` | OPS: | `r round(ops, digits = 3)`|
+ | SO: |`r so` ||||| OBP: | `r round(obp, digits = 3)`
+
+Hits| | 
+-|-|
+AVG Exit Velocity: | `r round(mean(es$ExitSpeed, na.rm = TRUE), digits = 2)` mph
+Max Exit Velocity: | `r round(max(es$ExitSpeed, na.rm = TRUE), digits = 2)` mph
+AVG Launch Angle: | `r round(mean(la$Angle, na.rm = TRUE), digits = 2)` degrees
+Max Estimated Distance: | `r round(max(Hitter$Distance, na.rm = TRUE), digits = 2)` feet
+
+<center>
+```{r Spray Chart}
+Hitter$Bearing <- ((Hitter$Bearing * -1) + 90)*pi/180
+Hitter$x <- Hitter$Distance*cos(Hitter$Bearing)
+Hitter$y <- Hitter$Distance*sin(Hitter$Bearing)
+bases <- data.frame(xa = c(0, 90/sqrt(2), 0, -90/sqrt(2), 0, rep(0)),
+ya = c(0, 90/sqrt(2), 2 * 90/sqrt(2), 90/sqrt(2), 0, rep(0)))
+sprayfilter <- Hitter %>%
+  filter(!PlayResult == "Undefined" & !PlayResult == "Sacrifice")
+bb <- ggplot(bases, aes(x = xa, y = ya)) + 
+  geom_path() + 
+  geom_point(data = sprayfilter, x = sprayfilter$x, y = sprayfilter$y, 
+             aes(color = factor(sprayfilter$PlayResult), 
+                 text = paste("Exit Speed: ", ExitSpeed, 
+                               "<br> Distance: ", Distance,
+                               "<br> Launch Angle: ", Angle), 
+                 shape = factor(sprayfilter$PlayResult))) + 
+  geom_segment(x = 0, xend = -233.35, y = 0, yend = 233.35) +
+  geom_segment(x = -233.35, xend = -160.59, y = 233.35, yend = 340) + 
+  geom_segment(x = -160.59, xend = -49.36, y = 340, yend = 401.98) +
+  geom_segment(x = -49.36, xend = 49.36, y = 401.98, yend = 401.98) +
+  geom_segment(x = 49.36, xend = 157.67, y = 401.98, yend = 338.05) +
+  geom_segment(x = 157.67, xend = 229.81, y = 338.05, yend = 229.81) +
+  geom_segment(x = 229.81, xend = 0, y = 229.81, yend = 0) +
+  xlim(-250, 250) + ylim(-10, 500) +
+  theme(axis.line = element_blank(),
+      axis.text.x = element_blank(),
+      axis.text.y = element_blank(),
+      axis.ticks = element_blank(),
+      axis.title.x = element_blank(),
+      axis.title.y = element_blank(),
+      panel.background = element_blank(),
+      panel.border = element_blank(),
+      panel.grid.major = element_blank(),
+      panel.grid.minor = element_blank(),
+      plot.background = element_blank(),
+      legend.title = element_blank()) +
+  coord_equal() +
+  scale_color_discrete(limits = c("Single" ,"Double", "Triple", "HomeRun", "Out", "FieldersChoice", "Error")) +
+  scale_shape_discrete(limits = c("Single" ,"Double", "Triple", "HomeRun", "Out", "FieldersChoice", "Error"))
+ggplotly(bb, tooltip = "text")
+```
+
+```{r Ninety Plus}
+NinetyPlus <- Hitter %>%
+  filter(ExitSpeed >= 90)
+np <- ggplot() +
   geom_path(data = sz, aes(x = x, y = z)) +
   coord_equal() +
   xlab("Plate Width") +
   ylab("Plate Height") +
   ggtitle("90+ Exit Velocities") +
-  geom_point(data = NinetyPlus,aes(x = PlateLocSide, y = PlateLocHeight, size = ExitSpeed, color = TaggedPitchType)) +
-  scale_size(range = c(0.1, 2)) + coord_cartesian(xlim = c(-2, 2), ylim = c(0, 5)) +
-  scale_color_discrete(limits=c("Fastball" ,"ChangeUp", "Splitter", "Curveball", "Slider"))
+  geom_point(data = NinetyPlus,
+             aes(x = PlateLocSide, y = PlateLocHeight, color = TaggedPitchType, 
+                 text = paste("Pitch Type: ", TaggedPitchType, "<br>Exit Speed: ", ExitSpeed, "<br> Distance: ", Distance, "<br> Launch Angle: ", Angle))) +
+  scale_color_discrete(limits = c("Fastball" ,"ChangeUp", "Splitter", "Curveball", "Slider")) +
+  coord_cartesian(xlim = c(-3, 3), ylim = c(0, 5)) +
+  theme(axis.line = element_blank(),
+        panel.background = element_blank(),
+        panel.border = element_blank(),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        plot.background = element_blank(),
+        legend.title = element_blank())
+ggplotly(np, tooltip = "text")
 ```
 
-```{r}
-Hitter <- Master %>%
-  filter(Batter == "McDaniel, Joel")
+```{r Fastball Takes}
 FastballTakes <- Hitter %>%
   filter(TaggedPitchType == "Fastball" & PitchCall == "StrikeCalled")
-x <- c(-.95,.95,.95,-.95,-.95)
-z <- c(1.6,1.6,3.5,3.5,1.6)
-sz <- data_frame(x, z)
-ggplot() +
+FastballTakes$Count <- paste(FastballTakes$Balls, "-", FastballTakes$Strikes, "") 
+ft <- ggplot() +
   geom_path(data = sz, aes(x = x, y = z)) +
   coord_equal() +
   xlab("Plate Width") +
   ylab("Plate Height") +
   ggtitle("Fastball Takes") +
-  geom_point(data = FastballTakes,aes(x = PlateLocSide, y = PlateLocHeight, color = TaggedPitchType)) +
-  coord_cartesian(xlim = c(-2, 2), ylim = c(0, 5))
+  geom_point(data = FastballTakes,aes(x = PlateLocSide, y = PlateLocHeight, color = TaggedPitchType, text = paste("Count: ", Count))) +
+  coord_cartesian(xlim = c(-3, 3), ylim = c(0, 5)) +
+  theme(axis.line = element_blank(),
+        panel.background = element_blank(),
+        panel.border = element_blank(),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        plot.background = element_blank(),
+        legend.title = element_blank())
+ggplotly(ft, tooltip = "text")
 ```
 
-```{r}
-Hitter <- Master %>%
-  filter(Batter == "McDaniel, Joel")
+```{r Whiffs}
 Whiffs <- Hitter %>%
   filter(PitchCall == "StrikeSwinging")
-x <- c(-.95,.95,.95,-.95,-.95)
-z <- c(1.6,1.6,3.5,3.5,1.6)
-sz <- data_frame(x, z)
-ggplot() +
+wh <- ggplot() +
   geom_path(data = sz, aes(x = x, y = z)) +
   coord_equal() +
   xlab("Plate Width") +
   ylab("Plate Height") +
   ggtitle("Swings & Misses") +
-  geom_point(data = Whiffs,aes(x = PlateLocSide, y = PlateLocHeight, color = TaggedPitchType)) + 
-  coord_cartesian(xlim = c(-2, 2), ylim = c(0, 5)) +
-  scale_color_discrete(limits = c("Fastball" ,"ChangeUp", "Splitter", "Curveball", "Slider"))
+  geom_point(data = Whiffs,aes(x = PlateLocSide, y = PlateLocHeight, color = TaggedPitchType, text = paste("Pitch Type: ", TaggedPitchType, "<br>Velocity: ", RelSpeed, "<br>Spin Rate: ", SpinRate))) +
+  scale_color_discrete(limits = c("Fastball" ,"ChangeUp", "Splitter", "Curveball", "Slider")) +
+  coord_cartesian(xlim = c(-2.55, 2.55), ylim = c(0, 5.1)) +
+  theme(axis.line = element_blank(),
+        panel.background = element_blank(),
+        panel.border = element_blank(),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        plot.background = element_blank(),
+        legend.title = element_blank())
+ggplotly(wh, tooltip = "text")
 ```
+</center>
+
+<hr>
